--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.8.1
+asttokens==3.0.0
+colorama==0.4.6
 Django==4.2.20
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+executing==2.2.0
 gunicorn==23.0.0
+i==2.1.0
 packaging==25.0
 psycopg2-binary==2.9.10
+Pygments==2.19.1
+PyJWT==2.9.0
 python-decouple==3.8
+rest-framework-simplejwt==0.0.2
 sqlparse==0.5.3
 typing_extensions==4.13.2
 whitenoise==6.9.0
